[package]
name = "multipart2"

version = "0.19.1"

authors = ["Austin Bonander <austin.bonander@gmail.com>"]

description = "A backend-agnostic extension for HTTP libraries that provides support for POST multipart/form-data requests on both client and server."

keywords = ["form-data", "http", "upload"]

repository = "http://github.com/abonander/multipart"

documentation = "http://docs.rs/multipart/"

license = "MIT OR Apache-2.0"

readme = "README.md"

[dependencies]
lazy_static = { version = "1.2.0", optional = true }
log = "0.4"
mime = "0.3.14"
mime_guess = "2.0.5"
rand = "0.8"
safemem = { version = "0.3", optional = true }
tempfile = "3"

#Server Dependencies
buffer-redux = { version = "1.0", optional = true, default-features = false }
httparse = { version = "1.2", optional = true }
twoway = { version = "0.2", optional = true }
quick-error = { version = "1.2", optional = true }

# Optional Integrations
tiny_http = { version = "0.12", optional = true }


[dev-dependencies]
env_logger = "0.11"

[features]
client = []
default = ["client", "mock", "server", "tiny_http"]
server = ["buffer-redux", "httparse", "quick-error", "safemem", "twoway"]
mock = []
nightly = []
bench = []

[[example]]
name = "tiny_http"
required-features = ["mock", "tiny_http", "server"]


